--- a/data/README
+++ b/data/README
@@ -12,7 +12,8 @@ Use ./decode_spi.sh <basename> [cartridge] for decoding trace file.
 Use ./run_emu.sh <basename> [cartridge] for running trace file throught emulator.
 Use ./unbuild.sh <cartridge> for dissecting cartridge file to components.
 Use ./read_trace.sh <basename> for reading binary trace file from SD.
-Use ./write_img.sh <basename> for writin cartridge image to SD.
+Use ./build.sh <basename> for building cartridge image from config file.
+Use ./write_img.sh <basename> for writing cartridge image to SD.
 
 Examples: 
 
